--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   image_picker: ^1.1.2
   firebase_storage: ^12.1.2
   path: ^1.9.0
+  firebase_database: ^11.0.4
 
 dev_dependencies:
   flutter_test:
