--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   intl: ^0.19.0
   curved_navigation_bar: ^1.0.6
   firebase_database: ^11.0.4
+  firebase_messaging: ^15.0.4
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
