--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   path: ^1.9.0
   intl: ^0.19.0
   curved_navigation_bar: ^1.0.6
-  firebase_database: ^11.0.4git add pubspec.yaml
+  firebase_database: ^11.0.4
 
   firebase_messaging: ^15.0.4
   http: ^1.2.2
