--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
 
   firebase_messaging: ^15.0.4
   http: ^1.2.2
+  googleapis: ^13.2.0
+  googleapis_auth: ^1.6.0
+  uuid: ^4.4.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
