--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   googleapis: ^13.2.0
   googleapis_auth: ^1.6.0
   uuid: ^4.4.2
+  flutter_local_notifications: ^17.2.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
