--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   googleapis_auth: ^1.6.0
   uuid: ^4.4.2
   flutter_local_notifications: ^17.2.2
+  flutter_rating_bar: ^4.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
