--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   uuid: ^4.4.2
   flutter_local_notifications: ^17.2.2
   flutter_rating_bar: ^4.0.1
+  razorpay_flutter: ^1.3.7
+  fluttertoast: ^8.2.8
 dev_dependencies:
   flutter_test:
     sdk: flutter
